--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <form action="/" method="post">
       <label for="cityInput">City Name: </label>
-      <input id="cityInput" type="text" name="City Name">
+      <input id="cityInput" type="text" name="cityName">
       <button type="submit">Go</button>
 
     </form>
